src/objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calcula la fecha de vencimiento agregando minutos a la hora de creación del servicio, lo que refleja el SLA interno de la organización</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TDT_CAS_Suceso_Mizad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si el Tipo de Trabajo (suceso) está relacionado con la red de profesional Mizad</description>
        <label>Suceso Mizad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TDT_SEL_Categoria__c</fullName>
        <description>Clasificación del Tipo de Trabajo (Siniestro, Servicio B2B/B2B2C).</description>
        <label>Categorías</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Categoria_TDT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDT_SEL_Gremio__c</fullName>
        <description>Gremio asociado al tipo de trabajo.</description>
        <label>Gremio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDT_TXT_Identificador__c</fullName>
        <description>Identificador exclusivo del Tipo de Trabajo.</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <columns>Name</columns>
        <columns>TDT_SEL_Categoria__c</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <columns>TDT_SEL_Gremio__c</columns>
        <columns>ShouldAutoCreateSvcAppt</columns>
        <filterScope>Everything</filterScope>
        <label>Todo tipo de trabajo</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Sucesos_de_B2B_B2B2C</fullName>
        <columns>Name</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TDT_SEL_Categoria__c</field>
            <operation>equals</operation>
            <value>B2B/B2B2C</value>
        </filters>
        <label>Sucesos de B2B/B2B2C</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Sucesos_de_Siniestros</fullName>
        <columns>Name</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <filterScope>Everything</filterScope>
        <label>Sucesos de Siniestros</label>
        <language>es</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(TDT_TXT_Identificador__c ))),ISCHANGED(TDT_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(TDT_TXT_Identificador__c),ISNULL( TDT_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>TDT_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>citas_Servicio_Automaticamente</fullName>
        <active>true</active>
        <errorConditionFormula>ShouldAutoCreateSvcAppt  = false</errorConditionFormula>
        <errorMessage>debe marcar la casilla de “Crear citas de servicio automáticamente”</errorMessage>
    </validationRules>
</CustomObject>